FireTracker.Infrastructure/k8s/ingress/firetracker-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firetracker-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.firetracker.sivach.me
      secretName: firetracker-tls
  rules:
    - host: api.firetracker.sivach.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firetracker-api-service
                port:
                  number: 80
